<resources>
    <string name="app_name">福百惠</string>
    <string name="title_activity_si_ji_quan">司机圈</string>
    <string name="title_activity_si_ji_shang_cheng">司机商城</string>

    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="login">确认登录</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="register">立即注册</string>
    <string name="register_title_text">填写手机号码</string>
    <string name="register_phone">中国+86</string>
    <string name="register_pwd">密码</string>
    <string name="register_confirm_pwd">确认密码</string>
    <string name="btn_next">下一步</string>

    <string name="toutiao">平台\n公告</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="send_sms_success">发送成功，注意查收</string>
    <string name="now_use">立\n即\n使\n用</string>
</resources>
