<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:clipToPadding="true"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/iv_login_top_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_fubaihui" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_login_top_icon"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">
            <!--用户名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_login_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user_accout"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:hint="请输入手机号"
                    android:inputType="text"
                    android:maxLength="11"
                    android:textColor="#000"
                    android:textSize="16dp" />

            </LinearLayout>
            <!--密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_round_login_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user_password"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingLeft="@dimen/dp_11"
                    android:textSize="16dp" />

            </LinearLayout>
            <!--登录按钮-->
            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/bg_round_login_button"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="16sp" />
            <!--立即注册 && 忘记密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <!--立即注册-->
                <Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
                <!--忘记密码-->
                <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="登录即表示同意福百惠用户协议"
                android:textColor="#656565"
                android:textSize="13dp" />-->
            <CheckBox
                android:id="@+id/ck_login_agree_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@null"
                android:checked="false"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/bg_login_checkbox_selector"
                android:drawablePadding="10dp"
                android:lines="1"
                android:text="登录即表示同意福百惠用户协议"
                android:textColor="#656565"
                android:textSize="13dp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>